# bntl

./: .gitignore  README.md  _reset.py  app.py  babel.cfg  ingest.py  pyproject.toml  settings.toml  settings_secret.toml  settings_vectorizer_logger.toml  test.py
bntl/: db.py  db_client.py  ingest.py  models.py  pagination.py  queries.py  settings.py  upload.py  utils.py  vector.py
static/: about.html  help.html  index.html  messages.pot  record.html  results.html  search.html  template.html
static/css/: main.css
static/js/: login.js  scripts.js  upload.js  utils.js
static/templates/: about.html  error_modal.html  help.html  history.html  index.html  item.html  loading.html  login.html  record.html  results.html  search.html  template.html  upload.html
static/translations/en/LC_MESSAGES/: messages.mo  messages.po
vectorizer/: client.py  db.py  model_manager.py  models.py  server.py  settings.py  utils.py
